# Sacrifice-After-Sacrifice

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo_check.yml
src/: asset_management.rs  camera.rs  level.rs  main.rs  main_menu.rs  screens.rs  start_screen.rs  ui.rs  util.rs  windowing.rs
src/screens/: level_selection.rs  loading.rs  mod.rs  splash.rs  title.rs  util.rs
src/screens/level/: mod.rs  one.rs
src/screens/settings/: button_effects.rs  mod.rs
src/screens/title/: button_effects.rs  mod.rs
src/screens/title/settings/: mod.rs
src/ui/: default.rs  mod.rs  title_screen.rs
