#cargo-features = ["codegen-backend"]

[package]
name = "sas"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy= { version = "0.16.1", features = ["dynamic_linking"] }
#disabling tracing
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
colored="3.0.0"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
#codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
#codegen-backend = "llvm"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
